--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@ table,  td, th, tr {
     border-bottom: 3pt black;
   }
   
-  tr.stripe {
+  .stripe {
     line-height: "300px";
+    height: "100px";
   }
   
   td.grn {
