--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ table,  td, th, tr {
     border-bottom: 3pt black;
   }
   
-  .stripe {
+  td.stripe {
     line-height: "300px";
     height: "100px";
   }
