--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ table,  td, th, tr {
   td.stripe {
     line-height: "300px";
     height: "100px";
+    background-color: red;
   }
   
   td.grn {
