--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,8 @@ table,  td, th, tr {
     /*border-bottom: 3pt black;*/
   }
   
-  td.stripe {
-    /*line-height: "300px";
-    height: "100px";*/
-    background-color: red;
+  .stripe {
+    height: "100px";
   }
   
   td.grn {
