--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ table {
     background-color: blue;
   }
   td.whi {
-    background-color: white;
+    background-color: gray;
   }
   td.smallText {
     font-size:xx-small;
