--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,10 @@ table {
     font-size:xx-small;
   }
 
-  /*td {
+  /* td {
     border-style : hidden!important;
-   }*/
+   } */
+   td {
+    border : none;
+   }
   
